runtime_loader: increase max length for image names.

* was previously 32, which would truncate longer shared object names.
* fixed #13436.